--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -13,6 +13,10 @@ body {
   background-color: #fff9ea;
 }
 
+section {
+  padding: 28px 8px;
+}
+
 .btn-default {
   border: none;
   display: flex;
@@ -30,3 +34,31 @@ body {
 .btn-default:hover{
     background-color: #f8d477;
 }
+
+.social-media-buttons {
+  display: flex;
+  gap:18px;
+}
+
+.social-media-buttons a {
+  display: flex;
+ align-items: center;
+ justify-content: center;
+ justify-content: center;
+ height: 45px;
+ height: 40px;
+ background-color: #ffffff;
+ font-size: 1.25rem;
+ border-radius: 10px;
+ text-decoration: none;
+ color: #1d1d1d;
+ box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+ padding: 2%;
+ transition: box-shadow .3s ease;
+}
+.social-media-buttons a:hover {
+  box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+}
+
+
+
